<resources>
    <string name="app_name">Dream Builder</string>

    <!-- Calculation Type Selection Fragment -->
    <string name="walls">Paredes</string>
    <string name="floor">Piso</string>
    <string name="painting">Pintura</string>

    <!-- Calculation fragments -->
    <string name="question_height">Qual é o valor do pé direito (altura) da casa?</string>
    <string name="question_wall_length">Qual é a soma do comprimento das paredes da casa?</string>
    <string name="question_gap_area">Qual é a soma das áreas das aberturas das paredes?</string>

    <string name="house">Dimensões da casa</string>
    <string name="tile">Dimensões da peça</string>
    <string name="dimension_width">Largura</string>
    <string name="dimension_length">Comprimento</string>
    <string name="times">X</string>
    <string name="add_footer">Adicionar rodapé</string>
    
    <string name="paint_efficiency_title">Rendimento da tinta</string>
    <string name="paint_efficiency_value">Valor:</string>
    <string name="paint_efficiency_unit">Unidade:</string>
    <string name="paint_efficiency_m2L">m²/L</string>
    <string name="paint_efficiency_m2D">m²/demão</string>
    <string name="paint_bucket_volume">Volume da lata de tinta (L)</string>

    <string name="answer_hint">Valor (metros)</string>
    <string name="next_button">Avançar</string>
    <string name="finish_button">Calcular</string>
    <string name="input_error">Necessário preencher</string>
    <string name="input_error_division_by_zero">Valor inválido</string>

    <!-- Brick Selection Fragment -->
    <string name="brick_selection_title">Escolha o tipo de tijolo:</string>
    <string name="brick_selection_dimensions">Largura x Altura x Comprimento</string>

    <string name="holes_brick_1">6 furos</string>
    <string name="dimensions_brick_1">9cm x 14cm x 19cm</string>

    <string name="holes_brick_2">8 furos</string>
    <string name="dimensions_brick_2">9cm x 19cm x 19cm</string>

    <string name="holes_brick_3">9 furos</string>
    <string name="dimensions_brick_3">11,5cm x 14cm x 24cm</string>
    
    <!-- Calculation Result Fragment -->
    <string name="result_title">Materiais necessários</string>

    <string name="result_bricks">Tijolos</string>
    <string name="result_bricks_unit">%,d unidade(s)</string>
    <string name="result_cement">Cimento</string>
    <string name="result_cement_unit">%,d saco(s) de 50kg</string>
    <string name="result_sand">Areia</string>
    <string name="result_sand_unit">%,.2f m³</string>

    <string name="result_tiles">Peças</string>
    <string name="result_tiles_unit">%,d unidade(s)</string>

    <string name="result_paint">Tinta</string>
    <string name="result_paint_unit">%,d lata(s)</string>

    <string name="result_back_to_menu">Voltar ao menu</string>
</resources>
