<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="32dp"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/paint_efficiency_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paint_efficiency_title"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:id="@+id/paint_efficiency_value_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paint_efficiency_value"
            android:textSize="14sp"
            android:layout_below="@id/paint_efficiency_title"
            android:layout_alignLeft="@id/paint_efficiency_title"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/paint_efficiency_value"
            android:minWidth="125dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_below="@id/paint_efficiency_value_label"
            android:layout_alignLeft="@id/paint_efficiency_value_label"/>

        <TextView
            android:id="@+id/paint_efficiency_unit_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paint_efficiency_unit"
            android:textSize="14sp"
            android:layout_below="@id/paint_efficiency_value"
            android:layout_alignLeft="@id/paint_efficiency_value"
            android:layout_marginTop="8dp"/>

        <RadioGroup
            android:id="@+id/paint_efficiency_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/paint_efficiency_unit_label"
            android:layout_alignLeft="@id/paint_efficiency_unit_label"
            android:layout_marginTop="8dp">

            <RadioButton
                android:id="@+id/paint_efficiency_m2D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paint_efficiency_m2D"
                android:textSize="14sp"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/paint_efficiency_m2L"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paint_efficiency_m2L"
                android:textSize="14sp"
                android:layout_marginLeft="16dp"/>

        </RadioGroup>

        <LinearLayout
            android:id="@+id/paint_bucket_volume_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_below="@id/paint_efficiency_unit"
            android:layout_alignLeft="@id/paint_efficiency_unit"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paint_bucket_volume"
                android:textSize="16sp"
                android:textColor="@android:color/black"/>

            <EditText
                android:id="@+id/paint_bucket_volume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <Button
            android:id="@+id/painting_next_button"
            android:minHeight="48dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_below="@id/paint_bucket_volume_container"
            android:layout_marginTop="32dp"/>

    </RelativeLayout>

</ScrollView>