<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:paddingTop="32dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/floor_image_house"
            android:minWidth="100dp"
            android:minHeight="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@color/colorPrimaryDark"
            android:scaleType="centerInside"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:id="@+id/floor_title_house"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="500dp"
            android:text="@string/house"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_alignTop="@id/floor_image_house"
            android:layout_toRightOf="@id/floor_image_house"
            android:layout_alignBottom="@id/floor_image_house"
            android:gravity="center_vertical"
            android:layout_marginLeft="16dp"/>

        <EditText
            android:id="@+id/floor_answer_house_width"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/answer_hint"
            android:maxLength="50"
            android:layout_alignLeft="@id/floor_question_house_width"
            android:layout_below="@id/floor_question_house_width" />

        <TextView
            android:id="@+id/times_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/times"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_toRightOf="@id/floor_answer_house_width"
            android:layout_alignBottom="@id/floor_answer_house_width"
            android:layout_marginLeft="8dp"/>

        <EditText
            android:id="@+id/floor_answer_house_length"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/answer_hint"
            android:maxLength="50"
            android:layout_alignLeft="@id/floor_question_house_length"
            android:layout_below="@id/floor_question_house_length" />

        <TextView
            android:id="@+id/floor_question_house_width"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dimension_width"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_alignLeft="@id/floor_image_house"
            android:layout_below="@id/floor_image_house"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/floor_question_house_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dimension_length"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_alignTop="@id/floor_question_house_width"
            android:layout_toRightOf="@id/times_sign"
            android:layout_marginLeft="8dp"/>

        <Button
            android:id="@+id/floor_next_button"
            android:minHeight="48dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_button"
            android:layout_below="@id/floor_answer_house_width"
            android:layout_alignLeft="@id/floor_answer_house_width"
            android:layout_alignRight="@id/floor_answer_house_length"
            android:layout_marginTop="16dp"/>

    </RelativeLayout>

</ScrollView>

