<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/painting_image_wall_length"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/wall_length_icon"
            android:scaleType="centerInside"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/painting_question_wall_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="500dp"
            android:text="@string/question_wall_length"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_alignTop="@id/painting_image_wall_length"
            android:layout_toRightOf="@id/painting_image_wall_length"
            android:layout_marginLeft="8dp"/>

        <EditText
            android:id="@+id/painting_answer_wall_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/answer_hint"
            android:maxLength="50"
            android:layout_alignBottom="@id/painting_image_wall_length"
            android:layout_alignLeft="@id/painting_question_wall_length"
            android:layout_alignRight="@id/painting_question_wall_length"/>

        <ImageView
            android:id="@+id/painting_image_gap_area"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/gap_area_icon"
            android:scaleType="centerInside"
            android:layout_below="@id/painting_image_wall_length"
            android:layout_alignLeft="@id/painting_image_wall_length"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/painting_question_gap_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="500dp"
            android:text="@string/question_gap_area"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_alignTop="@id/painting_image_gap_area"
            android:layout_toRightOf="@id/painting_image_gap_area"
            android:layout_marginLeft="8dp"/>

        <EditText
            android:id="@+id/painting_answer_gap_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/answer_hint"
            android:maxLength="50"
            android:layout_alignBottom="@id/painting_image_gap_area"
            android:layout_alignLeft="@id/painting_question_gap_area"
            android:layout_alignRight="@id/painting_question_wall_length"/>

        <Button
            android:id="@+id/painting_next_button2"
            android:minHeight="48dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_below="@id/painting_image_gap_area"
            android:layout_alignLeft="@id/painting_image_gap_area"
            android:layout_alignRight="@id/painting_answer_gap_area"
            android:layout_marginTop="16dp"/>

    </RelativeLayout>

</ScrollView>