<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="8dp"
    android:orientation="vertical"
    android:gravity="center">

    <ScrollView android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/walls"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/wall_calculation"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/walls"
                android:textColor="@android:color/black"
                android:layout_below="@id/walls"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"/>

            <Button
                android:id="@+id/floor"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/floor_calculation"
                android:layout_below="@id/walls"
                android:layout_toLeftOf="@id/walls"
                android:layout_marginTop="64dp"
                android:layout_marginRight="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/floor"
                android:textColor="@android:color/black"
                android:layout_below="@id/floor"
                android:layout_alignLeft="@id/floor"
                android:layout_alignRight="@id/floor"
                android:gravity="center_horizontal"
                android:layout_marginTop="8dp"/>

            <Button
                android:id="@+id/painting"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/painting_calculation"
                android:layout_below="@id/walls"
                android:layout_toRightOf="@id/walls"
                android:layout_marginTop="64dp"
                android:layout_marginLeft="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/painting"
                android:textColor="@android:color/black"
                android:layout_below="@id/painting"
                android:layout_alignLeft="@id/painting"
                android:layout_alignRight="@id/painting"
                android:gravity="center_horizontal"
                android:layout_marginTop="8dp"/>

        </RelativeLayout>

    </ScrollView>

</LinearLayout>